--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,13 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
+  firebase_database: ^11.3.5
+  google_maps_flutter: ^2.12.1
+  google_api_headers: ^4.4.3
+  geolocator: ^13.0.4
+  flutter_google_places_hoc081098: ^2.0.0
+  flutter_typeahead: ^5.2.0
+  intl: ^0.20.2
   flutter:
     sdk: flutter
 
@@ -57,6 +64,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/logo.png
+    - assets/images/default_profile.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
