--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   geolocator: ^13.0.4
   flutter_google_places_hoc081098: ^2.0.0
   flutter_typeahead: ^5.2.0
+  supabase_flutter: ^2.8.4
+  image_picker: ^1.1.2
+  path: ^1.9.1
+  mime: ^2.0.0
   intl: ^0.20.2
   flutter:
     sdk: flutter
