--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   latlong2: ^0.9.1
   path: ^1.9.1
   permission_handler: ^12.0.0+1
+  flutter_local_notifications: ^19.2.0
   mime: ^2.0.0
   intl: ^0.20.2
   flutter:
