--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.9.1
   permission_handler: ^12.0.0+1
   flutter_local_notifications: ^19.2.0
+  ably_flutter: ^1.2.37
   mime: ^2.0.0
   intl: ^0.20.2
   flutter:
